--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT= 4000
-DATABASE = mongodb+srv://pradip:pradip123@outoftown.0kpuzrr.mongodb.net/?retryWrites=true&w=majority
+DATABASE = mongodb://localhost/outoftown
+# DATABASE = mongodb+srv://pradip:pradip123@outoftown.0kpuzrr.mongodb.net/?retryWrites=true&w=majority
