--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node":"14.x"
   },
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "devStart": "nodemon ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
