--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "server",
   "version": "0.0.0",
   "private": true,
-  "engines":{
-    "node":"14.x"
-  },
   "scripts": {
     "start": "node ./bin/www",
     "devStart": "nodemon ./bin/www"
@@ -18,8 +15,11 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.5.3",
-    "morgan": "~1.9.1", 
+    "morgan": "~1.9.1",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.19"
+  },
+  "devDependencies": {
+    "firebase-tools": "^11.24.1"
   }
 }
