feat(database hosted)

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 PORT= 4000
-DATABASE = mongodb://localhost/outoftown
-# DATABASE = mongodb+srv://pradip:pradip123@outoftown.0kpuzrr.mongodb.net/?retryWrites=true&w=majority
+DATABASE = mongodb+srv://sarin:sarin123@cluster0.ipc1rr6.mongodb.net/?retryWrites=true&w=majority
